2000-09-11  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lib/lyxrc.example: remove description of all entries related to
	non-working pdf support.

2000-09-05  Dekel Tsur  <dekel@math.tau.ac.il>

	* src/mathed/math_macro.C (Metrics): Set the size of the template

	* src/mathed/formulamacro.C (Latex): Fixed the returned value

	* src/Spacing.C (writeEnvirBegin): avoid crash with old-style
	streams. 

2000-08-04  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/bmtable.c (fl_set_bmtable_pixmap_file): use C-style
	comments, not C++ ones.
	* src/support/strerror.c: ditto.

2000-08-01  Dekel Tsur  <dekel@math.tau.ac.il>

	* src/mathed/math_write.C (MathDecorationInset::Write) Put \protect 
	before \overbrace, \underbrace, \overleftarrow, or \overrightarrow.
	
2000-07-31  Matej Cepl <CeplM@seznam.cz>

	* lib/kbd/czech.kmap: new file. Standard Czech keyboard as found
	on usual typewriter.

	* lib/kbd/czech-prg.kmap: simpler czech kmap (which was the
	earlier czech.kmap), useful only for programming.

2000-07-27  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/version.h (LYX_VERSION): reset version number to
	1.1.5fixcvs. 

	* src/insets/insetbib.h (Clone): pass owner when creating a copy.

2000-07-25  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/lyxrc.C (read): do not use LyXLex::lex() to parse set_color
	arguments. 

2000-07-20  Serge Winitzki <winitzki@erebus.phys.cwru.edu>

	* lib/bind/sciword.bind: updated.

2000-07-18  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* version 1.1.5fix1 released.

	* src/version.h: update version number

2000-07-17  Kayvan Sylvan <ksylvan@synopsys.com>

	* configure.in: do not forget to put a space after -isystem.

2000-07-10  Dekel Tsur  <dekel@math.tau.ac.il>

	* lib/kbd/arabic.kmap: a few fixes.

2000-07-17  Juergen Vigna  <jug@sad.it>

	* src/table.C (Read): small fix for reading tabular-code with MS-DOS
	encoded .lyx-files.
